stable version with styling

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -1,9 +1,3 @@
-.justifySpaceBetween {
-  justify-content: space-between;
+.cartText{
+  color: #705e65;
 }
-
-.justifyFlexEnd {
-  justify-self: flex-end;
-}
-
-
