--- a/src/components/MainCard/AmountButton.module.css
+++ b/src/components/MainCard/AmountButton.module.css
@@ -1,8 +1,52 @@
 .width {
-    width: 3rem;
-} 
+  width: 6rem;
+  margin: auto;
+}
 
 .placeHolder {
-    font-size: 0.7rem;
-    padding:0.2rem 0.5rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #714154;
+  /* padding:0.2rem 0.5rem; */
+  background-color: rgba(0, 0, 0, 0.03);
+  border-color: #f5e8c7;
+}
+.placeHolder:focus {
+  background-color: inherit;
+  color: #714154;
+  box-shadow: 0 0 0 0.2rem #da8eac;
+
+}
+.placeHolder::-webkit-inner-spin-button {
+  opacity: 1;
+  background-color: red;
+  margin: 0;
+  background: transparent !important;
+}
+
+.btnColor {
+  background-color: #ac7088;
+  border-color: #f5e8c7;
+  padding: 0.5rem;
+}
+
+.btnColor:hover {
+  background-color: #865569;
+  border-color: #da8eac;
+}
+.btnColor:focus {
+  background-color: #ac7088;
+  border-color: #f5e8c7 !important;
+  box-shadow: none;
+  
+  outline: 0 none;
+}
+.btnColor:active {
+  background-color: #ac7088;
+  border-color: #f5e8c7;
+}   
+
+.btnColor:disabled {
+  background-color: #ba7792;
+  border-color: #f5e8c7;
 }
