--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
- html, body { margin: 0px; padding: 0px; width:100vw;}
+ html, body { margin: 0px; padding: 0px; width:100%;}
 
 html {
   scroll-behavior: smooth;
