changing Message.js text color and content.

--- a/src/components/Header/Message.module.css
+++ b/src/components/Header/Message.module.css
@@ -9,6 +9,7 @@
   opacity: 0.7;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   border-color: #c6a992;
+  color: rgb(60, 40, 33);
 }
 
 .svgImg {
