fixed anchor scrolling to id position

--- a/src/components/MainCard/MainCard.module.css
+++ b/src/components/MainCard/MainCard.module.css
@@ -1,6 +1,14 @@
 .mainCard {
-   margin: 11rem;
-   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  margin: 0rem 11rem 8rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+.anchor {
+  display: block;
+  position: relative;
+  top: -20vh;
+  visibility: hidden;
 }
 /* .zIndex {
  display: flex;
