--- a/src/components/MainCard/Cookie.module.css
+++ b/src/components/MainCard/Cookie.module.css
@@ -34,3 +34,10 @@ itemPrice {
 .cardText {
     height: 3rem;
 }
+
+@media (max-width:500px) {
+    .bodyBg{
+
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    }
+}
