adjust cart button to mobile responsive

--- a/src/components/Cart/CartContent.module.css
+++ b/src/components/Cart/CartContent.module.css
@@ -25,26 +25,31 @@
   background-color: rgb(255, 255, 255);
 }
 .inverseBtnColor:focus {
-    border-color: #ac7088;
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem #ac7088;
-    color: #ac7088;
+  border-color: #ac7088;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem #ac7088;
+  color: #ac7088;
 }
 .justifySpaceBetween {
   justify-content: space-between;
 }
 
-.cartText{
-    color: #657786;
-    
-  }
-  
+.cartText {
+  color: #657786;
+}
 
 .justifyFlexEnd {
   justify-self: flex-end;
 }
 
-
 .spinner {
   text-align: center;
+}
+
+@media (max-width: 500px) {
+  .btnColor,
+  .inverseBtnColor {
+    width: 7rem;
+    height: 2.5rem;
+  }
 }
