--- a/src/components/Header/Navigation.module.css
+++ b/src/components/Header/Navigation.module.css
@@ -1,32 +1,33 @@
-.bgColor{
-    background-color: #DEB6AB;
-    }
+.bgColor {
+  background-color: #deb6ab;
+}
 
 .btnColor {
-    background-color: #AC7088;
-    border-color: #ffbdd8;
-    padding: 0.5rem; 
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 7rem;
+  height: 3rem;
+  background-color: #ac7088;
+  border-color: #ffbdd8;
+  padding: 0.5rem;
 }
 
 .btnColor:hover {
-    background-color: #865569;
-    border-color: #da8eac;
-
+  background-color: #865569;
+  border-color: #da8eac;
 }
 .btnColor:focus {
-    background-color: #AC7088;
-    border-color: #da8eac;
-    box-shadow: 0 0 0 0.2rem #da8eac; 
-    
+  background-color: #ac7088;
+  border-color: #da8eac;
+  box-shadow: 0 0 0 0.2rem #da8eac;
 }
-.btnColor:active{
-    background-color: #AC7088;
-    border-color: #F5E8C7;
-
-    
+.btnColor:active {
+  background-color: #ac7088;
+  border-color: #f5e8c7;
 }
-
 
 .logoSvg {
-    filter: invert(48%) sepia(13%) saturate(1040%) hue-rotate(284deg) brightness(100%) contrast(89%);
+  filter: invert(48%) sepia(13%) saturate(1040%) hue-rotate(284deg)
+    brightness(100%) contrast(89%);
 }
