--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,8 @@
 .App {
-  max-width: 1440px;
+  /* max-width: 1440px; */
   text-align: center;
   margin: 0px;
   padding: 0px;
   width: 100%;
 }
+
